--- a/form/index.html
+++ b/form/index.html
@@ -11,15 +11,15 @@
    <fieldset><legend>FORM</legend>
         <label >FIRST NAME</label>
         <form action="">
-        <input type="text" id="fname" required onsubmit="checkname()">
+        <input type="text" id="fname" required >
         <label >LAST NAME</label>
         <input type="text" id="lname" required>
         <label >EMAIL</label>
         <input type="email" id="email" required> 
         <label >password</label>
-        <input type="password" id="password" required oninput="check()">
+        <input type="password" id="password" required >
         <label >conform-password</label>
-        <input type="password" id="conform-password" required oninput="check()"><span id="match"></span>
+        <input type="password" id="conform-password" required ><span id="match"></span>
         <button type="submit" >submit</button>
        </form>
    </fieldset>
